Fixed navbar not showing selected item properly. Added button to switch between today's events and the next 7 days events in the 'today' view. Improved the layout of the today page.

--- a/src/mystyles.scss
+++ b/src/mystyles.scss
@@ -3,6 +3,19 @@ div {
   animation-duration: 250ms;
 }
 
+.navbar-item a {
+  color: #bbbbbb;
+}
+
+.active-navbar-item a {
+  color: white;
+  font-weight: bolder;
+}
+
+a.adminactive {
+  color: white;
+  font-weight: bolder;
+}
 
 .highlights {
   margin: 0em 1em;
